# one-click-sdk-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: generate-and-publish.yml  publish.yml
.openapi-generator/: FILES
docs/: BadRequestResponse.md  OneClickApi.md  Quote.md  QuoteRequest.md  QuoteResponse.md  SwapDetails.md  TokenResponse.md  TransactionDetails.md
scripts/: regenerate-and-publish.sh
secrets/: secrets.enc.yaml
src/apis/: client.rs  configuration.rs  mod.rs  one_click_api.rs
src/models/: app_fee.rs  bad_request_response.rs  get_execution_status_response.rs  mod.rs  quote.rs  quote_request.rs  quote_response.rs  submit_deposit_tx_request.rs  submit_deposit_tx_response.rs  swap_details.rs  token_response.rs  transaction_details.rs
v0/: Cargo.toml  README.md  git_push.sh
v0/.openapi-generator/: FILES
v0/docs/: AnyInputQuoteWithdrawal.md  AppFee.md  GetAnyInputQuoteWithdrawals.md  GetExecutionStatusResponse.md  OneClickApi.md  Quote.md  QuoteRequest.md  QuoteResponse.md  SubmitDepositTxRequest.md  SubmitDepositTxResponse.md  SwapDetails.md  TokenResponse.md
v0/src/apis/: configuration.rs  one_click_api.rs
v0/src/models/: any_input_quote_withdrawal.rs  app_fee.rs  bad_request_response.rs  get_any_input_quote_withdrawals.rs  get_execution_status_response.rs  mod.rs  quote.rs  quote_request.rs  quote_response.rs  submit_deposit_tx_request.rs  submit_deposit_tx_response.rs  swap_details.rs  token_response.rs  transaction_details.rs
