[package]
name = "one-click-sdk-rs"
version = "0.1.15"
authors = ["2025 NEAR Foundation"]
description = "API for One-Click Swaps"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
